python/testData/highlighting/continueInFinallyBlock.py
while True:
  try:
    x
  finally:
    <error descr="'continue' not supported inside 'finally' clause">continue</error>